2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBProxyContentHandler.py:
	* pycvsanaly2/DBTempLog.py:

	Limit the maximun size of the queues used in ProxyContentHandler
	and TempLog. It saves a lot of memory. Hopefully OOM issues are 
	fixed now. 
	
2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/AsyncQueue.py:

	Add optional queue max size, bloking on put() when the queue reaches
	such a max size.
	
2009-02-18  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/SVNParser.py:

	Use the number of lines given by the log for the commit message
	instead of guessing it. It fixes (hopefully) all the parsing
	warnings in SVN.
	
2009-02-18  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/SVNParser.py:

	Ignore invalid commits. In asterisk we have found commits like
	this:

	r176840 | (no author) | (no date) | 1 line

	without any changed path. I don't know what it is, but it doesn't
	seem to be useful at all.
	
2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Install man page.
	
2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-02-13  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Raise ExtensionRunError exception instead of showing an error
	message when the repository creation fails, since the extension 
	can't continue without a repository object.
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* NEWS:

	Update for release 1.99.90 (2.0.0-beta1).
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* README:

	Updated
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* AUTHORS:
	* setup.py:
	* TODO:
	* MANIFEST.in:
	* pycvsanaly2/*:
	* db/*
	
	Merge cvsanaly2 branch.
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>
	
	* setup.py:
	* NEWS:

	Update for release 1.1.0
	
2007-11-24  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
